@@ -58,6 +58,8 @@ dpkg (1.18.11) UNRELEASED; urgency=medium
     - Fix reproducible source package support in Dpkg::Source::Archive, by
       sorting the tar contents with --sort=name.
     - Prefix private Dpkg::Source::Package::* functions with _.
+    - Defer filehandle closures in Dpkg::IPC::spawn() to avoid double-close.
+      Closes: #839905, #840293
   * Packaging:
     - Add liblocale-gettext-perl to libdpkg-perl Recommends.
     - Wrap and document dependency relationships.
